--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
     <title>Grid</title>
   </head>
   <body>
     <div class="body">
-      <header>Шапка страницы</header>
+      <header>
+        <p>Шапка страницы</p>
+      </header>
       <main>
-        <div class="container">
-          <div class="box1">Основная часть</div>
-          <div class="box2">
-            <div class="box2-1">Еще 1</div>
-            <div class="box2-2">Еще 2</div>
-          </div>
-          <div class="box3">Еще 3</div>
-        </div>
-        <aside class="box-aside">Боковая часть</aside>
+        <!--<div class="container">-->
+        <div class="box1"><p>Основная часть</p></div>
+        <div class="box2-1"><p>Еще 1</p></div>
+        <div class="box2-2"><p>Еще 2</p></div>
+        <div class="box3"><p>Еще 3</p></div>
+        <!--</div>-->
+        <aside class="box-aside">
+          <p>Боковая часть</p>
+        </aside>
       </main>
       <footer>
-        <div>Секция футера 1</div>
-        <div>Секция футера 2</div>
-        <div>Секция футера 3</div>
-        <div>Секция футера 4</div>
+        <div class="footer-box">Секция футера 1</div>
+        <div class="footer-box">Секция футера 2</div>
+        <div class="footer-box">Секция футера 3</div>
+        <div class="footer-box">Секция футера 4</div>
       </footer>
     </div>
   </body>
