--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <header>
       <p>Шапка страницы</p>
     </header>
-    <main>
-      <div class="box1"><p>Основная часть</p></div>
-      <div class="box2"><p>Еще 1</p></div>
-      <div class="box3"><p>Еще 2</p></div>
-      <div class="box4"><p>Еще 3</p></div>
-    </main>
-    <aside class="box-aside">
-      <p>Боковая часть</p>
-    </aside>
+    <div class="wrapper">
+      <main>
+        <div class="box1"><p>Основная часть</p></div>
+        <div class="box2"><p>Еще 1</p></div>
+        <div class="box3"><p>Еще 2</p></div>
+        <div class="box4"><p>Еще 3</p></div>
+      </main>
+      <aside class="box-aside">
+        <p>Боковая часть</p>
+      </aside>
+    </div>
     <footer>
       <div class="footer-box">Секция футера 1</div>
       <div class="footer-box">Секция футера 2</div>
